--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,16 @@ html {
 
   body {
     font-family: "Comfortaa", sans-serif;
+    user-select: none;
+    touch-action: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    outline: none;
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   }
 
   h1 {
